--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@
   .leading-auto {
     @apply /* line-height:normal equivalent of figma line-height:auto */ leading-[normal];
   }
+  .btn{
+    @apply bg-secondary px-8 py-4 rounded-sm text-white
+  }
 }
 /* mobile first approach */
 /* @media(min-width:576px ){
