--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,14 @@
     @apply /* line-height:normal equivalent of figma line-height:auto */ leading-[normal];
   }
   .btn{
-    @apply bg-secondary px-8 py-4 rounded-sm text-white
+    @apply bg-secondary font-bold px-8 py-4 rounded-sm text-white hover:bg-secondary-dark disabled:bg-secondary-light disabled:cursor-not-allowed
+  }
+
+  .form-group{
+    @apply mb-3
+  }
+  .form-control{
+    @apply  w-full rounded-[2px] bg-transparent border border-[#C2C5E1] focus:outline-none px-4 py-2 
   }
 }
 /* mobile first approach */
